[gd_scene load_steps=4 format=3 uid="uid://dpa8hnxsodblo"]

[ext_resource type="Texture2D" uid="uid://q5kjwsydx41i" path="res://assets/piece.png" id="1_e4jw1"]
[ext_resource type="Script" path="res://piece.gd" id="2_1j8wk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h24vs"]

[node name="Piece" type="Area2D"]
script = ExtResource("2_1j8wk")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_e4jw1")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 64
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.5, 6.5)
shape = SubResource("CircleShape2D_h24vs")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="move_complete" from="." to="." method="_on_move_complete"]
